# UBTEDU-Sim-Lab

./: .gitattributes  .gitignore
assets/robots/tienkung_pro/: tienkung_pro_with_hands.urdf
assets/robots/walker_s2/: s2.urdf
assets/scenes/parlor/: scene_v2.usd  scene_v3.usd  standard_scene.json
assets/scenes/parlor/Object_assets_v1/fruit/fruit_11_T1/: fruit_11_T1.usd
assets/scenes/parlor/Object_assets_v1/fruit/fruit_11_T1/textures/: Num13_Clementine_tfcmeilra_8K_inst.mdl
assets/scenes/parlor/Object_assets_v1/fruit/fruit_23_T1/: fruit_23_T1.usd
assets/scenes/parlor/Object_assets_v1/fruit/fruit_52_T1/: fruit_52_T1.usd
assets/scenes/parlor/Object_assets_v1/plate/plate_98_T1/: plate_98_T1.usdc
assets/scenes/parlor/Object_assets_v1/vegetable/vegetable_03_T1/: vegetable_03_T1.usd
assets/scenes/parlor/Object_assets_v1/vegetable/vegetable_09_T1/: vegetable_09_T1.usdc
assets/scenes/parlor/smalllivingroom/: 005.usd  model_smalllivingroom.usd
assets/scenes/parlor/smalllivingroom/resource/: material.usd
assets/scenes/parlor/smalllivingroom/resource/v_2144154/: link_49504_0.usd
source/: pyproject.toml
source/ubt_sim/devices/: device_base.py
source/ubt_sim/utils/: config_loader.py  constant.py  loop_utils.py  monkey_patch.py
teleoperation/bridges/: build_cpp_bridge.sh
teleoperation/control/tienkung_pro/: right_arm.urdf
teleoperation/msgs/: ros-humble-bodyctrl-msgs_0.0.1-1_amd64.deb
teleoperation/msgs/body_crtl_msgs_src/: release.sh
teleoperation/tools/: analyze_data.py  extract_right_arm_urdf.py
(+4 files in other folders)
